--- a/buildspec.yml
+++ b/buildspec.yml
@@ -33,6 +33,7 @@ phases:
       - apt-get update && apt-get -y install jq  && pip install --upgrade awscli
   pre_build:
       commands:
+        - python3 -m pip3 install --upgrade pip
         - pip3 install -r requirements.txt
         - python3 -m pytest test_main.py
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
